Fixes for rights icons alignment

--- a/src/main/webapp/themes/default/css/europeana-font-icons.css
+++ b/src/main/webapp/themes/default/css/europeana-font-icons.css
@@ -322,3 +322,36 @@
 .icon-euroicon:before {
 	content: "\32";
 }
+
+
+/* rights icons all have different image borders - corrective css margins added here */
+
+
+span.rights-icon.icon-copyright{
+	margin-top:	.07em;
+}
+
+span.rights-icon.icon-pd{
+	margin-top:	.22em;
+}
+
+span.rights-icon.icon-cczero{
+	margin-top:	.18em;
+}
+
+span.rights-icon.icon-cc, span.rights-icon.icon-by, span.rights-icon.icon-sa, span.rights-icon.icon-nc, span.rights-icon.icon-nd{
+	margin-top:	.215em;
+}
+
+span.rights-icon.icon-unknown{
+	margin-top:	.07em;
+}
+
+
+
+
+
+
+
+
+
